--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "feather": "^0.0.5"
+    "feather": "^0.0.5",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
